<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.my.mvc.project</groupId>
	<artifactId>my-mvc-project</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.3</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<modules>
		<module>client-module</module>
		<module>web-module</module>
		<module>business-module</module>
	</modules>

	<name>my-mvc-project</name>
	<description>Demo project for Spring Boot</description>
	<properties>
		<java.version>17</java.version>
		<repackage.classifier />
		<spring-native.version>0.12.1</spring-native.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.redisson</groupId>
				<artifactId>redisson-spring-boot-starter</artifactId>
				<version>3.17.6</version>
			</dependency>
			<dependency>
				<groupId>javax.cache</groupId>
				<artifactId>cache-api</artifactId>
				<version>1.1.1</version>
			</dependency>
			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<version>2.1.214</version>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.asciidoctor</groupId>
					<artifactId>asciidoctor-maven-plugin</artifactId>
					<version>1.5.8</version>
					<executions>
						<execution>
							<id>generate-docs</id>
							<phase>prepare-package</phase>
							<goals>
								<goal>process-asciidoc</goal>
							</goals>
							<configuration>
								<backend>html</backend>
								<doctype>book</doctype>
							</configuration>
						</execution>
					</executions>
					<dependencies>
						<dependency>
							<groupId>org.springframework.restdocs</groupId>
							<artifactId>spring-restdocs-asciidoctor</artifactId>
							<version>${spring-restdocs.version}</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<configuration>
						<excludes>
							<exclude>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
							</exclude>
						</excludes>
						<classifier>${repackage.classifier}</classifier>
						<image>
							<builder>paketobuildpacks/builder:tiny</builder>
							<env>
								<BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
							</env>
						</image>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.springframework.experimental</groupId>
					<artifactId>spring-aot-maven-plugin</artifactId>
					<version>${spring-native.version}</version>
					<executions>
						<execution>
							<id>test-generate</id>
							<goals>
								<goal>test-generate</goal>
							</goals>
						</execution>
						<execution>
							<id>generate</id>
							<goals>
								<goal>generate</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.hibernate.orm.tooling</groupId>
					<artifactId>hibernate-enhance-maven-plugin</artifactId>
					<version>${hibernate.version}</version>
					<executions>
						<execution>
							<id>enhance</id>
							<goals>
								<goal>enhance</goal>
							</goals>
							<configuration>
								<failOnError>true</failOnError>
								<enableLazyInitialization>true</enableLazyInitialization>
								<enableDirtyTracking>true</enableDirtyTracking>
								<enableAssociationManagement>true</enableAssociationManagement>
								<enableExtendedEnhancement>false</enableExtendedEnhancement>
							</configuration>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>native</id>
			<properties>
				<repackage.classifier>exec</repackage.classifier>
				<native-buildtools.version>0.9.13</native-buildtools.version>
			</properties>
			<dependencies>
				<dependency>
					<groupId>org.junit.platform</groupId>
					<artifactId>junit-platform-launcher</artifactId>
					<scope>test</scope>
				</dependency>
			</dependencies>
			<build>
				<plugins>
					<plugin>
						<groupId>org.graalvm.buildtools</groupId>
						<artifactId>native-maven-plugin</artifactId>
						<version>${native-buildtools.version}</version>
						<extensions>true</extensions>
						<executions>
							<execution>
								<id>test-native</id>
								<phase>test</phase>
								<goals>
									<goal>test</goal>
								</goals>
							</execution>
							<execution>
								<id>build-native</id>
								<phase>package</phase>
								<goals>
									<goal>build</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>